# example-project

./: .gitignore  .pre-commit-config.yaml  playground.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
transform/: dbt_project.yml
true_grit/: __init__.py  extract.py
true_grit/tests/: test_extract.py
